Your descriptive commit message

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Afghanistan's Most Trusted Pharmaceutical Logistics Partner</h1>
-                <p>KQC (Kabul Quality Chain) ensures reliable, safe, and compliant pharmaceutical supply chain solutions across Afghanistan. Serving healthcare providers with integrity and excellence since our establishment.</p>
+                <p>Kashmir Qasemi Logistic & Trading Company ensures reliable, safe, and compliant pharmaceutical supply chain solutions across Afghanistan. Serving healthcare providers with integrity and excellence since our establishment.</p>
                 <div class="hero-stats">
                     <div class="stat">
                         <div class="stat-number">900m²</div>
@@ -75,7 +75,7 @@
                 <div class="about-text">
                     <div class="intro-card">
                         <h3>Our Mission & Commitment</h3>
-                        <p>KQC (Kabul Quality Chain) is a fully registered and licensed pharmaceutical importer, supplier, and logistics company proudly serving Afghanistan's healthcare sector. We are deeply committed to ensuring the Afghan people have access to quality medicines through safe, efficient, and compliant supply chain operations that meet both national regulations and international best practices.</p>
+                        <p>Kashmir Qasemi Logistic & Trading Company is a fully registered and licensed pharmaceutical importer, supplier, and logistics company proudly serving Afghanistan's healthcare sector. We are deeply committed to ensuring the Afghan people have access to quality medicines through safe, efficient, and compliant supply chain operations that meet both national regulations and international best practices.</p>
                         <div class="trust-badges">
                             <div class="badge">
                                 <i class="fas fa-certificate"></i>
