--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
                         <h3>Location</h3>
-                        <p>Kabul, Afghanistan<br>Pharmaceutical Distribution Hub</p>
+                        <p>Parwan Hotel, District 15 Kabul, Afghanistan</p>
                     </div>
                     <div class="contact-card">
                         <div class="contact-icon">
@@ -285,7 +285,7 @@
                             <i class="fas fa-envelope"></i>
                         </div>
                         <h3>Email</h3>
-                        <p>info@kqclogistics.af<br>logistics@kqclogistics.af</p>
+                        <p>info@KQC.af<br>kashmir.qasemi@gmail.com</p>
                     </div>
                 </div>
                 <div class="contact-form">
@@ -355,9 +355,9 @@
                 <div class="footer-section">
                     <h4>Contact Info</h4>
                     <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> Kabul, Afghanistan</li>
+                        <li><i class="fas fa-map-marker-alt"></i>Parwan Hotel, District 15 Kabul, Afghanistan</li>
                         <li><i class="fas fa-phone"></i> 0706001414 / 0748001414</li>
-                        <li><i class="fas fa-envelope"></i> info@kqclogistics.af</li>
+                        <li><i class="fas fa-envelope"></i> info@KQC.af</li>
                     </ul>
                 </div>
             </div>
